# MOPED

imagesender/: CMakeLists.txt  package.xml
moped-example/: CMakeLists.txt  moped-example.launch  package.xml
moped2/: CMakeLists.txt  moped.cpp  moped_test.cpp  package.xml
moped2/libmoped/libs/SiftGPU/: SiftGPU.cpp
moped2/libmoped/src/: config.hpp  moped.cpp
