<package>
  <name>imagesender</name>
  <version>0.0.0</version>
  <description>

     Simple image sender from files. Read images from disk and publish Image and
     CameraInfo data.
     
     * imagesender.py - Read image name in images list, send image through the network, and wait until images list is updated.
     * imagesenderlist.py - Read list of images and send them all through the network.

  </description>
  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Alvaro Collet</author>
  <license>BSD</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>


